--- a/index.html
+++ b/index.html
@@ -1,19 +1,78 @@
-<script>
-  const noBtn = document.getElementById("no");
-  const yesBtn = document.getElementById("yes");
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Valentine?</title>
+  <style>
+    body {
+      height: 100vh;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #ffe6f0;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
 
-  noBtn.addEventListener("mouseover", () => {
-    const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
-    const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
-    noBtn.style.left = ${x}px;
-    noBtn.style.top = ${y}px;
-  });
+    .container {
+      text-align: center;
+    }
 
-  yesBtn.addEventListener("click", () => {
-    document.body.innerHTML = `
-      <h1 style="color:#d63384; font-size:3rem;">
-        Good boy 🐶💖
-      </h1>
-    `;
-  });
-</script>
+    h1 {
+      font-size: 2.5rem;
+      color: #d63384;
+      margin-bottom: 40px;
+    }
+
+    button {
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    #yes {
+      background-color: #ff4d6d;
+      color: white;
+      margin-right: 20px;
+    }
+
+    #no {
+      background-color: #adb5bd;
+      color: white;
+      position: absolute;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <h1>Baby, will you be my Valentine? 💕</h1>
+    <button id="yes">Yes</button>
+    <button id="no">No</button>
+  </div>
+
+  <script>
+    const noBtn = document.getElementById("no");
+    const yesBtn = document.getElementById("yes");
+
+    noBtn.addEventListener("mouseover", () => {
+      const x = Math.random() * (window.innerWidth - noBtn.offsetWidth);
+      const y = Math.random() * (window.innerHeight - noBtn.offsetHeight);
+      noBtn.style.left = x + "px";
+      noBtn.style.top = y + "px";
+    });
+
+    yesBtn.addEventListener("click", () => {
+      document.body.innerHTML = `
+        <h1 style="color:#d63384; font-size:3rem; text-align:center;">
+          Good boy 🐶💖
+        </h1>
+      `;
+    });
+  </script>
+
+</body>
+</html>
